# address-fixer

./: README.md  pyproject.toml
data/processed/: test_addresses.csv  test_results.csv  validated_addresses.csv
data/raw/: addresses.txt
data/reference/postal-codes/: 01xcodpos.txt  030codpos.txt  050codpos.txt  070codpos.txt  080codpos.txt  082codpos.txt  100codpos.txt  110codpos.txt  111codpos.txt  140codpos.txt  150codpos.txt  250codpos.txt  260codpos.txt  280codpos.txt  285codpos.txt  286codpos.txt  288codpos.txt  289codpos.txt  300codpos.txt  30xcodpos.txt  320codpos.txt  33xcodpos.txt  350codpos.txt  380codpos.txt  381codpos.txt  390codpos.txt  410codpos.txt  460codpos.txt  470codpos.txt
scripts/: convert_txt_to_csv.py  process_addresses.py  test_llm_reviewer.py  test_model.py
src/: pipeline.py
src/llm/: reviewer.py
src/normalization/: text.py
src/parsing/: address.py
src/validation/: postal_codes.py  rules.py
tests/: test_parsing.py  test_postal_codes.py  test_rules.py
