[project]
name = "address-fixer-local"
version = "0.1.0"
description = "Fix malformed addresses in a database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx-lm>=0.28.3",
    "outlines>=1.2.9",
    "pandas>=2.3.3",
    "postal>=1.1.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
